# executors

./: .gitignore  Makefile.am  README.md  concurrency.html  configure.ac  index.html  narrow.css
include/: Makefile.am
include/experimental/: await  channel  continuation  executor  future  loop_scheduler  memory  strand  thread_pool  timer  type_traits  yield
include/experimental/bits/: associated_allocator.h  associated_executor.h  await_context.h  bind_executor.h  call_stack.h  chain.h  channel.h  channel_base.h  channel_void.h  codefer.h  codispatch.h  coinvoker.h  continuation.h  copost.h  curry.h  defer.h  defer_after.h  defer_at.h  dispatch.h  dispatch_after.h  dispatch_at.h  exception_ptr_executor.h  execution_context.h  executor.h  executor_binder.h  executor_binder_base.h  executor_impl.h  executor_traits.h  executor_work.h  executor_work_guard.h  executor_wrapper.h  executor_wrapper_base.h  function_op.h  function_traits.h  get_allocator.h  get_associated_allocator.h  get_associated_executor.h  get_executor.h  invoker.h  is_executor.h  (+34 more)
src/: Makefile.am
src/examples/: Makefile.am
src/examples/channel/: .gitignore  Makefile.am  ping.cpp  pingpong.cpp  (+1 more)
src/examples/executor/: .gitignore  Makefile.am  actor.cpp  async_1.cpp  async_2.cpp  async_getline.cpp  async_op_1.cpp  async_op_2.cpp  async_op_3.cpp  bank_account_1.cpp  bank_account_2.cpp  bank_account_3.cpp  bank_account_4.cpp  bank_account_5.cpp  bank_account_6.cpp  bank_account_7.cpp  bank_account_8.cpp  bank_account_9.cpp  fork_join.cpp  pipeline.cpp  post_1.cpp  post_2.cpp  post_3.cpp  post_4.cpp  post_5.cpp  priority_scheduler.cpp  sort.cpp  sort_1.cpp  sort_2.cpp  sort_3.cpp  sort_4.cpp  sort_5.cpp  sort_7.cpp
src/examples/timer/: .gitignore  Makefile.am  dispatch_after_1.cpp  dispatch_after_2.cpp  dispatch_at_1.cpp  dispatch_at_2.cpp
src/examples/trading/: .gitignore  Makefile.am  ports.txt  symbols.txt
src/examples/trading/client/: enter_one_order.cpp  market_data_dump.cpp
src/examples/trading/common/: market_data.cpp  market_data.hpp  order_management.cpp  order_management.hpp  order_side.cpp  order_side.hpp  udp_socket.cpp  udp_socket.hpp
src/examples/trading/server/: connection_handler.cpp  connection_handler.hpp  market_by_order.cpp  market_by_order.hpp  market_data_bus.cpp  market_data_bus.hpp  market_data_feed.hpp  order_book.cpp  order_book.hpp  order_management_bus.cpp  order_management_bus.hpp  price_time_order_book.cpp  price_time_order_book.hpp  server.cpp
src/tests/: .gitignore  Makefile.am
src/tests/execution_context/: .gitignore  Makefile.am  service_construction.cpp  service_inheritance.cpp  service_ordering.cpp
src/tests/executor/: .gitignore  Makefile.am  chain_int.cpp  chain_int_int.cpp  chain_int_void.cpp  chain_void.cpp  comparisons.cpp  curry_int.cpp  curry_int_int.cpp  curry_int_void.cpp  curry_void.cpp  defer.cpp  defer_after.cpp  defer_at.cpp  dispatch.cpp  dispatch_after.cpp  dispatch_after_int.cpp  dispatch_after_void.cpp  dispatch_at.cpp  dispatch_at_int.cpp  dispatch_at_void.cpp  dispatch_int.cpp  dispatch_void.cpp  post.cpp  post_after.cpp  post_at.cpp  post_int.cpp  post_void.cpp  wrap_defer.cpp  wrap_defer_after.cpp  wrap_defer_at.cpp  wrap_dispatch.cpp  wrap_dispatch_after.cpp  wrap_dispatch_after_int.cpp  wrap_dispatch_after_void.cpp  wrap_dispatch_at.cpp  wrap_dispatch_at_int.cpp  wrap_dispatch_at_void.cpp  wrap_dispatch_int.cpp  wrap_dispatch_void.cpp  (+5 more)
src/tests/no_executor/: .gitignore  Makefile.am  chain_int.cpp  chain_int_int.cpp  chain_int_void.cpp  chain_void.cpp  curry_int.cpp  curry_int_int.cpp  curry_int_void.cpp  curry_void.cpp  defer.cpp  defer_after.cpp  defer_at.cpp  dispatch.cpp  dispatch_after.cpp  dispatch_after_int.cpp  dispatch_after_void.cpp  dispatch_at.cpp  dispatch_at_int.cpp  dispatch_at_void.cpp  dispatch_int.cpp  dispatch_void.cpp  post.cpp  post_after.cpp  post_at.cpp  post_int.cpp  post_void.cpp
src/tests/performance/: .gitignore  Makefile.am  function_context_switch.cpp  yield_channel.cpp  yield_context_switch.cpp
src/tests/strand/: .gitignore  Makefile.am  allocator.cpp  defer.cpp  defer_after.cpp  defer_at.cpp  dispatch.cpp  dispatch_after.cpp  dispatch_at.cpp  dispatch_int.cpp  dispatch_void.cpp  nested_dispatch.cpp  post.cpp  post_after.cpp  post_at.cpp  post_int.cpp  post_void.cpp  sequential.cpp  wrap_defer.cpp  wrap_defer_after.cpp  wrap_defer_at.cpp  wrap_dispatch.cpp  wrap_dispatch_after.cpp  wrap_dispatch_at.cpp  wrap_dispatch_int.cpp  wrap_dispatch_void.cpp  wrap_post.cpp  wrap_post_after.cpp  wrap_post_at.cpp  wrap_post_int.cpp  wrap_post_void.cpp
src/tests/system_executor/: .gitignore  Makefile.am  defer.cpp  defer_after.cpp  defer_at.cpp  dispatch.cpp  dispatch_after.cpp  dispatch_at.cpp  dispatch_int.cpp  dispatch_void.cpp  join.cpp  post.cpp  post_after.cpp  post_at.cpp  post_int.cpp  post_void.cpp  wrap_defer.cpp  wrap_defer_after.cpp  wrap_defer_at.cpp  wrap_dispatch.cpp  wrap_dispatch_after.cpp  wrap_dispatch_at.cpp  wrap_dispatch_int.cpp  wrap_dispatch_void.cpp  wrap_post.cpp  wrap_post_after.cpp  wrap_post_at.cpp  wrap_post_int.cpp  wrap_post_void.cpp
src/tests/thread_pool/: .gitignore  Makefile.am  defer.cpp  defer_after.cpp  defer_at.cpp  dispatch.cpp  dispatch_after.cpp  dispatch_after_int.cpp  dispatch_after_void.cpp  dispatch_at.cpp  dispatch_at_int.cpp  dispatch_at_void.cpp  dispatch_int.cpp  dispatch_void.cpp  get_associated_executor.cpp  make_work.cpp  nested_dispatch.cpp  post.cpp  post_after.cpp  post_at.cpp  post_int.cpp  post_void.cpp  wrap_defer.cpp  wrap_defer_after.cpp  wrap_defer_at.cpp  wrap_dispatch.cpp  wrap_dispatch_after.cpp  wrap_dispatch_at.cpp  wrap_dispatch_int.cpp  wrap_dispatch_void.cpp  wrap_post.cpp  wrap_post_after.cpp  wrap_post_at.cpp  wrap_post_int.cpp  wrap_post_void.cpp
src/tests/timer/: .gitignore  Makefile.am  async_wait.cpp  cancel.cpp  dispatch_after.cpp  dispatch_after_int.cpp  dispatch_at.cpp  dispatch_at_int.cpp  wait.cpp
src/tests/traits/: Makefile.am  ec.cpp  ec_int.cpp  ec_int_int.cpp  ep.cpp  ep_int.cpp  ep_int_int.cpp  int.cpp  int_int.cpp  void.cpp
(+32 files in other folders)
