AUTOMAKE_OPTIONS = foreign dist-bzip2 dist-zip

SUBDIRS = include src

MAINTAINERCLEANFILES = \
	$(srcdir)/aclocal.m4 \
	$(srcdir)/compile \
	$(srcdir)/configure \
	$(srcdir)/config.guess \
	$(srcdir)/config.sub \
	$(srcdir)/depcomp \
	$(srcdir)/install-sh \
	$(srcdir)/missing \
	$(srcdir)/mkinstalldirs \
	$(srcdir)/Makefile.in \
	$(srcdir)/test-driver \
	experimental-*.tar.gz \
	experimental-*.tar.bz2 \
	experimental-*.zip

EXTRA_DIST = \
	LICENSE_1_0.txt
