nobase_include_HEADERS = \
	experimental/await \
	experimental/channel \
	experimental/continuation \
	experimental/executor \
	experimental/future \
	experimental/loop_scheduler \
	experimental/memory \
	experimental/strand \
	experimental/timer \
	experimental/type_traits \
	experimental/thread_pool \
	experimental/yield \
	experimental/bits/associated_allocator.h \
	experimental/bits/associated_executor.h \
	experimental/bits/await_context.h \
	experimental/bits/call_stack.h \
	experimental/bits/chain.h \
	experimental/bits/channel.h \
	experimental/bits/channel_void.h \
	experimental/bits/codefer.h \
	experimental/bits/codispatch.h \
	experimental/bits/coinvoker.h \
	experimental/bits/continuation.h \
	experimental/bits/copost.h \
	experimental/bits/defer.h \
	experimental/bits/defer_at.h \
	experimental/bits/defer_after.h \
	experimental/bits/dispatch.h \
	experimental/bits/dispatch_at.h \
	experimental/bits/dispatch_after.h \
	experimental/bits/exception_ptr_executor.h \
	experimental/bits/execution_context.h \
	experimental/bits/executor.h \
	experimental/bits/executor_traits.h \
	experimental/bits/executor_work.h \
	experimental/bits/executor_wrapper.h \
	experimental/bits/function_traits.h \
	experimental/bits/invoker.h \
	experimental/bits/loop_scheduler.h \
	experimental/bits/operation.h \
	experimental/bits/packaged_task.h \
	experimental/bits/post.h \
	experimental/bits/post_at.h \
	experimental/bits/post_after.h \
	experimental/bits/promise_handler.h \
	experimental/bits/reactor.h \
	experimental/bits/scheduler.h \
	experimental/bits/small_block_recycler.h \
	experimental/bits/strand.h \
	experimental/bits/system_executor.h \
	experimental/bits/thread_pool.h \
	experimental/bits/timed_invoker.h \
	experimental/bits/timer.h \
	experimental/bits/timer_queue.h \
	experimental/bits/tuple_utils.h \
	experimental/bits/wait_op.h \
	experimental/bits/wrap.h \
	experimental/bits/yield_context.h

MAINTAINERCLEANFILES = \
	$(srcdir)/Makefile.in
