nobase_include_HEADERS = \
	experimental/executor \
	experimental/future \
	experimental/loop_scheduler \
	experimental/memory \
	experimental/strand \
	experimental/timer \
	experimental/type_traits \
	experimental/thread_pool \
	experimental/bits/associated_allocator.h \
	experimental/bits/associated_executor.h \
	experimental/bits/call_stack.h \
	experimental/bits/defer.h \
	experimental/bits/defer_at.h \
	experimental/bits/defer_after.h \
	experimental/bits/dispatch.h \
	experimental/bits/dispatch_at.h \
	experimental/bits/dispatch_after.h \
	experimental/bits/exception_ptr_executor.h \
	experimental/bits/execution_context.h \
	experimental/bits/executor.h \
	experimental/bits/executor_work.h \
	experimental/bits/executor_wrapper.h \
	experimental/bits/executor_wrapper_base.h \
	experimental/bits/function_op.h \
	experimental/bits/get_associated_allocator.h \
	experimental/bits/get_associated_executor.h \
	experimental/bits/loop_scheduler.h \
	experimental/bits/make_work.h \
	experimental/bits/operation.h \
	experimental/bits/packaged_task.h \
	experimental/bits/post.h \
	experimental/bits/post_at.h \
	experimental/bits/post_after.h \
	experimental/bits/promise_handler.h \
	experimental/bits/reactor.h \
	experimental/bits/scheduler.h \
	experimental/bits/small_block_recycler.h \
	experimental/bits/strand.h \
	experimental/bits/system_executor.h \
	experimental/bits/thread_pool.h \
	experimental/bits/timer_op.h \
	experimental/bits/timer_queue.h \
	experimental/bits/timer_service.h \
	experimental/bits/work_dispatcher.h \
	experimental/bits/wrap.h

MAINTAINERCLEANFILES = \
	$(srcdir)/Makefile.in
