nobase_include_HEADERS = \
	experimental/executor \
	experimental/loop_scheduler \
	experimental/thread_pool \
	experimental/bits/associated_allocator.h \
	experimental/bits/associated_executor.h \
	experimental/bits/bind_executor.h \
	experimental/bits/call_stack.h \
	experimental/bits/defer.h \
	experimental/bits/dispatch.h \
	experimental/bits/execution_context.h \
	experimental/bits/executor.h \
	experimental/bits/executor_binder.h \
	experimental/bits/executor_binder_base.h \
	experimental/bits/executor_work.h \
	experimental/bits/function_op.h \
	experimental/bits/get_associated_allocator.h \
	experimental/bits/get_associated_executor.h \
	experimental/bits/is_executor.h \
	experimental/bits/loop_scheduler.h \
	experimental/bits/make_work.h \
	experimental/bits/operation.h \
	experimental/bits/packaged_task.h \
	experimental/bits/post.h \
	experimental/bits/scheduler.h \
	experimental/bits/small_block_recycler.h \
	experimental/bits/strand.h \
	experimental/bits/system_executor.h \
	experimental/bits/thread_pool.h \
	experimental/bits/use_future.h \
	experimental/bits/work_dispatcher.h

MAINTAINERCLEANFILES = \
	$(srcdir)/Makefile.in
