noinst_PROGRAMS = \
	bank_account_1 \
	bank_account_2 \
	bank_account_3 \
	bank_account_4 \
	bank_account_5 \
	bank_account_6 \
	bank_account_7 \
	sort_1 \
	sort_2

AM_CXXFLAGS = -I$(srcdir)/../../../include

bank_account_1_SOURCES = bank_account_1.cpp
bank_account_2_SOURCES = bank_account_2.cpp
bank_account_3_SOURCES = bank_account_3.cpp
bank_account_4_SOURCES = bank_account_4.cpp
bank_account_5_SOURCES = bank_account_5.cpp
bank_account_6_SOURCES = bank_account_6.cpp
bank_account_7_SOURCES = bank_account_7.cpp
sort_1_SOURCES = sort_1.cpp
sort_2_SOURCES = sort_2.cpp

MAINTAINERCLEANFILES = \
	$(srcdir)/Makefile.in
