noinst_PROGRAMS = \
	async_1 \
	async_2 \
	bank_account_1 \
	bank_account_2 \
	bank_account_3 \
	bank_account_4 \
	bank_account_5 \
	bank_account_6 \
	bank_account_7 \
	bank_account_8 \
	bank_account_9 \
	fork_join \
	pipeline \
	priority_scheduler \
	sort_1 \
	sort_2 \
	sort_3 \
	sort_4 \
	sort_5 \
	sort_6 \
	sort_7

AM_CXXFLAGS = -I$(srcdir)/../../../include

async_1_SOURCES = async_1.cpp
async_2_SOURCES = async_2.cpp
bank_account_1_SOURCES = bank_account_1.cpp
bank_account_2_SOURCES = bank_account_2.cpp
bank_account_3_SOURCES = bank_account_3.cpp
bank_account_4_SOURCES = bank_account_4.cpp
bank_account_5_SOURCES = bank_account_5.cpp
bank_account_6_SOURCES = bank_account_6.cpp
bank_account_7_SOURCES = bank_account_7.cpp
bank_account_8_SOURCES = bank_account_8.cpp
bank_account_9_SOURCES = bank_account_9.cpp
fork_join_SOURCES = fork_join.cpp
pipeline_SOURCES = pipeline.cpp
priority_scheduler_SOURCES = priority_scheduler.cpp
sort_1_SOURCES = sort_1.cpp
sort_2_SOURCES = sort_2.cpp
sort_3_SOURCES = sort_3.cpp
sort_4_SOURCES = sort_4.cpp
sort_5_SOURCES = sort_5.cpp
sort_6_SOURCES = sort_6.cpp
sort_7_SOURCES = sort_7.cpp

MAINTAINERCLEANFILES = \
	$(srcdir)/Makefile.in
