noinst_PROGRAMS = \
	actor \
	async_1 \
	async_op_1 \
	async_op_2 \
	bank_account_1 \
	bank_account_2 \
	bank_account_3 \
	fork_join \
	pipeline \
	post_1 \
	post_2 \
	post_3 \
	post_4 \
	post_5 \
	priority_scheduler

AM_CXXFLAGS = -I$(srcdir)/../../../include

actor_SOURCES = actor.cpp
async_1_SOURCES = async_1.cpp
async_op_1_SOURCES = async_op_1.cpp
async_op_2_SOURCES = async_op_2.cpp
bank_account_1_SOURCES = bank_account_1.cpp
bank_account_2_SOURCES = bank_account_2.cpp
bank_account_3_SOURCES = bank_account_3.cpp
fork_join_SOURCES = fork_join.cpp
pipeline_SOURCES = pipeline.cpp
post_1_SOURCES = post_1.cpp
post_2_SOURCES = post_2.cpp
post_3_SOURCES = post_3.cpp
post_4_SOURCES = post_4.cpp
post_5_SOURCES = post_5.cpp
priority_scheduler_SOURCES = priority_scheduler.cpp

MAINTAINERCLEANFILES = \
	$(srcdir)/Makefile.in
