noinst_PROGRAMS = \
	dispatch_at_1 \
	dispatch_at_2 \
	dispatch_after_1 \
	dispatch_after_2

AM_CXXFLAGS = -I$(srcdir)/../../../include

dispatch_at_1_SOURCES = dispatch_at_1.cpp
dispatch_at_2_SOURCES = dispatch_at_2.cpp
dispatch_after_1_SOURCES = dispatch_after_1.cpp
dispatch_after_2_SOURCES = dispatch_after_2.cpp

MAINTAINERCLEANFILES = \
	$(srcdir)/Makefile.in
