noinst_PROGRAMS = \
	service_construction \
	service_inheritance \
	service_ordering

TESTS = \
	service_construction \
	service_inheritance \
	service_ordering

AM_CXXFLAGS = -I$(srcdir)/../../../include

service_construction_SOURCES = service_construction.cpp
service_inheritance_SOURCES = service_inheritance.cpp
service_ordering_SOURCES = service_ordering.cpp

MAINTAINERCLEANFILES = \
	$(srcdir)/Makefile.in
