noinst_PROGRAMS = \
	comparisons \
	defer \
	dispatch \
	post \
	wrap_defer \
	wrap_dispatch \
	wrap_post

TESTS = \
	comparisons \
	defer \
	dispatch \
	post \
	wrap_defer \
	wrap_dispatch \
	wrap_post

AM_CXXFLAGS = -I$(srcdir)/../../../include

comparisons_SOURCES = comparisons.cpp
defer_SOURCES = defer.cpp
dispatch_SOURCES = dispatch.cpp
post_SOURCES = post.cpp
wrap_defer_SOURCES = wrap_defer.cpp
wrap_dispatch_SOURCES = wrap_dispatch.cpp
wrap_post_SOURCES = wrap_post.cpp

MAINTAINERCLEANFILES = \
	$(srcdir)/Makefile.in
