noinst_PROGRAMS = \
	dispatch_int \
	dispatch_void \
	dispatch_after_int \
	dispatch_after_void \
	dispatch_at_int \
	dispatch_at_void \
	post_int \
	post_void

TESTS = \
	dispatch_int \
	dispatch_void \
	dispatch_after_int \
	dispatch_after_void \
	dispatch_at_int \
	dispatch_at_void \
	post_int \
	post_void

AM_CXXFLAGS = -I$(srcdir)/../../../include

dispatch_int_SOURCES = dispatch_int.cpp
dispatch_void_SOURCES = dispatch_void.cpp
dispatch_after_int_SOURCES = dispatch_after_int.cpp
dispatch_after_void_SOURCES = dispatch_after_void.cpp
dispatch_at_int_SOURCES = dispatch_at_int.cpp
dispatch_at_void_SOURCES = dispatch_at_void.cpp
post_int_SOURCES = post_int.cpp
post_void_SOURCES = post_void.cpp

MAINTAINERCLEANFILES = \
	$(srcdir)/Makefile.in
