noinst_PROGRAMS = \
	chain_int \
	chain_int_int \
	chain_int_void \
	chain_void \
	dispatch_int \
	dispatch_void \
	dispatch_after_int \
	dispatch_after_void \
	dispatch_at_int \
	dispatch_at_void \
	post_int \
	post_void

TESTS = \
	chain_int \
	chain_int_int \
	chain_int_void \
	chain_void \
	dispatch_int \
	dispatch_void \
	dispatch_after_int \
	dispatch_after_void \
	dispatch_at_int \
	dispatch_at_void \
	post_int \
	post_void

AM_CXXFLAGS = -I$(srcdir)/../../../include

chain_int_SOURCES = chain_int.cpp
chain_int_int_SOURCES = chain_int_int.cpp
chain_int_void_SOURCES = chain_int_void.cpp
chain_void_SOURCES = chain_void.cpp
dispatch_int_SOURCES = dispatch_int.cpp
dispatch_void_SOURCES = dispatch_void.cpp
dispatch_after_int_SOURCES = dispatch_after_int.cpp
dispatch_after_void_SOURCES = dispatch_after_void.cpp
dispatch_at_int_SOURCES = dispatch_at_int.cpp
dispatch_at_void_SOURCES = dispatch_at_void.cpp
post_int_SOURCES = post_int.cpp
post_void_SOURCES = post_void.cpp

MAINTAINERCLEANFILES = \
	$(srcdir)/Makefile.in
