noinst_PROGRAMS = \
	defer \
	defer_after \
	defer_at \
	dispatch \
	dispatch_after \
	dispatch_at \
	post \
	post_after \
	post_at

TESTS = \
	defer \
	defer_after \
	defer_at \
	dispatch \
	dispatch_after \
	dispatch_at \
	post \
	post_after
	post_at

AM_CXXFLAGS = -I$(srcdir)/../../../include

defer_SOURCES = defer.cpp
defer_after_SOURCES = defer_after.cpp
defer_at_SOURCES = defer_at.cpp
dispatch_SOURCES = dispatch.cpp
dispatch_after_SOURCES = dispatch_after.cpp
dispatch_at_SOURCES = dispatch_at.cpp
post_SOURCES = post.cpp
post_after_SOURCES = post_after.cpp
post_at_SOURCES = post_at.cpp

MAINTAINERCLEANFILES = \
	$(srcdir)/Makefile.in
