noinst_PROGRAMS = \
	function_context_switch \
	yield_channel \
	yield_context_switch

AM_CXXFLAGS = -I$(srcdir)/../../../include

function_context_switch_SOURCES = function_context_switch.cpp
yield_channel_SOURCES = yield_channel.cpp
yield_context_switch_SOURCES = yield_context_switch.cpp

MAINTAINERCLEANFILES = \
	$(srcdir)/Makefile.in
