noinst_PROGRAMS = \
	allocator \
	defer \
	dispatch \
	nested_dispatch \
	post \
	sequential \
	wrap_defer \
	wrap_dispatch \
	wrap_post

TESTS = \
	allocator \
	defer \
	dispatch \
	nested_dispatch \
	post \
	sequential \
	wrap_defer \
	wrap_dispatch \
	wrap_post

AM_CXXFLAGS = -I$(srcdir)/../../../include

allocator_SOURCES = allocator.cpp
defer_SOURCES = defer.cpp
dispatch_SOURCES = dispatch.cpp
nested_dispatch_SOURCES = nested_dispatch.cpp
post_SOURCES = post.cpp
sequential_SOURCES = sequential.cpp
wrap_defer_SOURCES = wrap_defer.cpp
wrap_dispatch_SOURCES = wrap_dispatch.cpp
wrap_post_SOURCES = wrap_post.cpp

MAINTAINERCLEANFILES = \
	$(srcdir)/Makefile.in
