noinst_PROGRAMS = \
	defer \
	defer_after \
	defer_at \
	dispatch \
	dispatch_after \
	dispatch_at \
	post \
	post_after \
	post_at \
	wrap_defer \
	wrap_defer_after \
	wrap_defer_at \
	wrap_dispatch \
	wrap_dispatch_after \
	wrap_dispatch_at \
	wrap_post \
	wrap_post_after \
	wrap_post_at

TESTS = \
	defer \
	defer_after \
	defer_at \
	dispatch \
	dispatch_after \
	dispatch_at \
	post \
	post_after \
	post_at \
	wrap_defer \
	wrap_defer_after \
	wrap_defer_at \
	wrap_dispatch \
	wrap_dispatch_after \
	wrap_dispatch_at \
	wrap_post \
	wrap_post_after \
	wrap_post_at

AM_CXXFLAGS = -I$(srcdir)/../../../include

defer_SOURCES = defer.cpp
defer_after_SOURCES = defer_after.cpp
defer_at_SOURCES = defer_at.cpp
dispatch_SOURCES = dispatch.cpp
dispatch_after_SOURCES = dispatch_after.cpp
dispatch_at_SOURCES = dispatch_at.cpp
post_SOURCES = post.cpp
post_after_SOURCES = post_after.cpp
post_at_SOURCES = post_at.cpp
wrap_defer_SOURCES = wrap_defer.cpp
wrap_defer_after_SOURCES = wrap_defer_after.cpp
wrap_defer_at_SOURCES = wrap_defer_at.cpp
wrap_dispatch_SOURCES = wrap_dispatch.cpp
wrap_dispatch_after_SOURCES = wrap_dispatch_after.cpp
wrap_dispatch_at_SOURCES = wrap_dispatch_at.cpp
wrap_post_SOURCES = wrap_post.cpp
wrap_post_after_SOURCES = wrap_post_after.cpp
wrap_post_at_SOURCES = wrap_post_at.cpp

MAINTAINERCLEANFILES = \
	$(srcdir)/Makefile.in
