noinst_PROGRAMS = \
	defer \
	dispatch \
	join \
	post \
	wrap_defer \
	wrap_dispatch \
	wrap_post

TESTS = \
	defer \
	dispatch \
	join \
	post \
	wrap_defer \
	wrap_dispatch \
	wrap_post

AM_CXXFLAGS = -I$(srcdir)/../../../include

defer_SOURCES = defer.cpp
dispatch_SOURCES = dispatch.cpp
join_SOURCES = join.cpp
post_SOURCES = post.cpp
wrap_defer_SOURCES = wrap_defer.cpp
wrap_dispatch_SOURCES = wrap_dispatch.cpp
wrap_post_SOURCES = wrap_post.cpp

MAINTAINERCLEANFILES = \
	$(srcdir)/Makefile.in
