noinst_PROGRAMS = \
	dispatch_int \
	dispatch_void \
	dispatch_after_int \
	dispatch_after_void \
	dispatch_at_int \
	dispatch_at_void \
	make_work \
	nested_dispatch \
	post_int \
	post_void \
	wrap_dispatch_int \
	wrap_dispatch_void \
	wrap_post_int \
	wrap_post_void

TESTS = \
	dispatch_int \
	dispatch_void \
	dispatch_after_int \
	dispatch_after_void \
	dispatch_at_int \
	dispatch_at_void \
	make_work \
	nested_dispatch \
	post_int \
	post_void \
	wrap_dispatch_int \
	wrap_dispatch_void \
	wrap_post_int \
	wrap_post_void

AM_CXXFLAGS = -I$(srcdir)/../../../include

dispatch_int_SOURCES = dispatch_int.cpp
dispatch_void_SOURCES = dispatch_void.cpp
dispatch_after_int_SOURCES = dispatch_after_int.cpp
dispatch_after_void_SOURCES = dispatch_after_void.cpp
dispatch_at_int_SOURCES = dispatch_at_int.cpp
dispatch_at_void_SOURCES = dispatch_at_void.cpp
make_work_SOURCES = make_work.cpp
nested_dispatch_SOURCES = nested_dispatch.cpp
post_int_SOURCES = post_int.cpp
post_void_SOURCES = post_void.cpp
wrap_dispatch_int_SOURCES = wrap_dispatch_int.cpp
wrap_dispatch_void_SOURCES = wrap_dispatch_void.cpp
wrap_post_int_SOURCES = wrap_post_int.cpp
wrap_post_void_SOURCES = wrap_post_void.cpp

MAINTAINERCLEANFILES = \
	$(srcdir)/Makefile.in
