noinst_PROGRAMS = \
	defer \
	dispatch \
	get_associated_executor \
	make_work \
	nested_dispatch \
	post \
	wrap_defer \
	wrap_dispatch \
	wrap_post

TESTS = \
	defer \
	dispatch \
	get_associated_executor \
	make_work \
	nested_dispatch \
	post \
	wrap_defer \
	wrap_dispatch \
	wrap_post

AM_CXXFLAGS = -I$(srcdir)/../../../include

defer_SOURCES = defer.cpp
dispatch_SOURCES = dispatch.cpp
get_associated_executor_SOURCES = get_associated_executor.cpp
make_work_SOURCES = make_work.cpp
nested_dispatch_SOURCES = nested_dispatch.cpp
post_SOURCES = post.cpp
wrap_defer_SOURCES = wrap_defer.cpp
wrap_dispatch_SOURCES = wrap_dispatch.cpp
wrap_post_SOURCES = wrap_post.cpp

MAINTAINERCLEANFILES = \
	$(srcdir)/Makefile.in
