noinst_PROGRAMS = \
	async_wait \
	cancel \
	dispatch_after \
	dispatch_at \
	wait

TESTS = \
	async_wait \
	cancel \
	dispatch_after \
	dispatch_at \
	wait

AM_CXXFLAGS = -I$(srcdir)/../../../include

async_wait_SOURCES = async_wait.cpp
cancel_SOURCES = cancel.cpp
dispatch_after_SOURCES = dispatch_after.cpp
dispatch_at_SOURCES = dispatch_at.cpp
wait_SOURCES = wait.cpp

MAINTAINERCLEANFILES = \
	$(srcdir)/Makefile.in
