noinst_PROGRAMS = \
	async_wait \
	cancel \
	dispatch_after_int \
	dispatch_at_int \
	wait

TESTS = \
	async_wait \
	cancel \
	dispatch_after_int \
	dispatch_at_int \
	wait

AM_CXXFLAGS = -I$(srcdir)/../../../include

async_wait_SOURCES = async_wait.cpp
cancel_SOURCES = cancel.cpp
dispatch_after_int_SOURCES = dispatch_after_int.cpp
dispatch_at_int_SOURCES = dispatch_at_int.cpp
wait_SOURCES = wait.cpp

MAINTAINERCLEANFILES = \
	$(srcdir)/Makefile.in
