noinst_PROGRAMS = \
	void \
	ec \
	ep \
	int \
	ec_int \
	ep_int \
	int_int \
	ec_int_int \
	ep_int_int

TESTS = \
	void \
	ec \
	ep \
	int \
	ec_int \
	ep_int \
	int_int \
	ec_int_int \
	ep_int_int

AM_CXXFLAGS = -I$(srcdir)/../../../include

void_SOURCES = void.cpp
ec_SOURCES = ec.cpp
ep_SOURCES = ep.cpp
int_SOURCES = int.cpp
ec_int_SOURCES = ec_int.cpp
ep_int_SOURCES = ep_int.cpp
int_int_SOURCES = int_int.cpp
ec_int_int_SOURCES = ec_int_int.cpp
ep_int_int_SOURCES = ep_int_int.cpp

MAINTAINERCLEANFILES = \
	$(srcdir)/Makefile.in
